# retail-app

./: .gitignore  Dockerfile  Dockerfile.db  Dockerfile.web  Makefile  Pipfile  README.md  pyproject.toml
docs/: dev_notes_1  dev_notes_2  dev_notes_3  dev_notes_4  dev_notes_4.md  dev_notes_5.md  feature_discussion_1  issue_tracker  issue_tracker.md
scripts/: tests.sh  tidy.sh
scripts/db/: retail_db_init.sql
src/: app.py  config.py  flask_app.py  main.py  orm.py  repository.py  services.py  test_main.py
src/adapters/: orm.py  repository.py
src/domain/models/: batch.py  order_line.py  product.py
src/entrypoints/: flask_app.py
src/models/: __init__.py  batch.py  order_line.py
src/service_layer/: services.py  unit_of_work.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: test_orm.py  test_repository.py  test_uow.py
tests/unit/: conftest.py  test_api.py  test_app.py  test_batch.py  test_batch_allocation.py  test_main.py  test_orders.py  test_orm.py  test_product.py  test_repository.py  test_services.py
