[project]
name = "retail_app"
version = "0.0.1"
authors = [
    { name = "Saurabh Mahambrey", email = "mahambrey.saurabh07@gmail.com" },
]
description = "A retail app following TDD framework"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/saurabhsm07/retail-app"
"Bug Tracker" = "https://github.com/saurabhsm07/retail-app/issues"

[tool.pytest.ini_options]
pythonpath = "src" #sets the PYTHONPATH environment variable to include the "src" directory
addopts = [
    "--import-mode=importlib",
]